text overflow Fix

--- a/src/EmailRow.css
+++ b/src/EmailRow.css
@@ -4,14 +4,14 @@
     border-top:0.1px solid rgb(239, 236, 236) ;
     border-bottom:0.1px solid rgb(239, 236, 236);
     padding:2px;
+    overflow: hidden;
+    flex:1;
+    /* width:100%; */
 
 
 
 }
-.emailRow.clicked {
-    background-color: blue;
 
-  }
 .myClass>.MuiSvgIcon-root{
     display: flex;
     color: gray !important;
@@ -21,9 +21,14 @@
     visibility: hidden;
 }
 .emailRow_title{
-    flex: 0.3;
     color:black;
     font-weight: 500;
+    margin-right: 10px;
+    flex:0.12;
+    overflow:hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    margin-right: 90px;
 
 
 }
@@ -40,25 +45,35 @@
     box-shadow: 0px 1px 3px rgb(195, 191, 191);
     cursor: pointer;
 }
-.emailRow_message{
-    margin-left: -170px;
-    font-weight: 500;
+.emailRow_subDesc{
+    display: flex;
+    flex:0.9;
     white-space: nowrap;
+    overflow:hidden;
+
+
 
 }
-.emailRow_description{
-    flex:0.8;
+.emailRow_subDesc>p{
     white-space: nowrap;
-    display: flex;
-    color: gray;
-    margin-left: 5px;
+    overflow:hidden;
+    text-overflow:ellipsis;
+
 }
-.emailRow_description>p{
-    margin-left: 80px;
+
+.time>p{
+    position: relative;
+    flex:0.2;
     color:black;
-    font-weight: 500;
-    font-size: 13px;
+    font-weight: 520;
+    font-size: 12px;
+    margin-right: 2px;
+    margin-left: 80px;
 }
+/* .empty_space{
+    flex:0.1;
+
+} */
 @media (max-width: 429px) {
     .emailRow_message{
         margin-left: 50px;
